--- a/index.css
+++ b/index.css
@@ -1,6 +1,63 @@
-h1 {
-    color: red;
+* {
+    font-family: Helvetica, Arial, sans-serif;
 }
-body {
-    background-color: tan;
+h1 {
+    color: rgb(7, 4, 4);
+}
+p,
+li {
+    font-size: 18px;
+}
+a {
+    text-decoration: none;
+}
+.coqui-img {
+    -webkit-box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
+    -moz-box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
+    box-shadow: 5px 0px 5px 0px rgba(0, 0, 50, 0.97);
+    float: center;
+    width: 300px;
+  }
+
+.banner {
+      background-color: lightcyan;
+      color: rgb(8, 4, 4);
+      margin-top: 75px;
+      text-align: center;
+      padding-top: 2px;
+      padding-bottom: 20px;
+  }
+.footer {
+    background-color: lightcyan;
+    color: black;
+    margin-top: 75px;
+    text-align: center;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+.h2 {
+    text-align: center;
+    text-rendering: auto;
+    background-color: lightcyan;
+    padding-top: 1px;
+    padding-bottom: 20px;
+}
+body{
+    background-color: darkgray;
+    margin-left: 20%;
+    margin-right:20%;
+    border:1px dotted gray;
+    font-family: sans-serif;
+}
+#h2 {
+    text-align: center;
+}
+#list {
+    text-align: center;
+    text-rendering: auto;
+    background-color: whitesmoke;
+}
+.que-pasa {
+    text-align: center;
+    color: white;
 }
